--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 <section>
   <div class="jumbotron jumbotron-fluid">
     <div class="container text-center text-light">
-      <h1 class="display-4">Partez à l'aventure</h1>
-      <h2 class="h3">Découvrez notre école de surf en peer-learning</h2>
+      <h1 class="display-4">Julio & Bento</h1>
+      <h2 class="h3">Développeurs Ruby on Rails</h2>
       <button type="button" class="btn btn-primary btn-lg m-3">Nos projets</button>
       <button type="button" class="btn btn-secondary btn-lg  m-3">Nous contacter</button>
     </div>
