add animation to cards style

--- a/index.html
+++ b/index.html
@@ -80,75 +80,82 @@
 
   <!-- PROJECTS -->
   <h2 class="display-4 text-center" id="projets">PROJETS</h2>
-
-  <div class="d-flex justify-content-center">
-    <div class="card mb-3" style="max-width: 540px;">
-      <div class="row g-0">
-        <div class="col-md-4">
-          <img class="img" src= assets/img/monka1.jpg  alt="Image Monka Project">
+  <div class="cards">
+    <div class="d-flex justify-content-center">
+      <div class="card mb-3">
+        <div class="row g-0">
+          <div class="col-md-4">
+            <img class="img" src= assets/img/monka1.png alt="Image Monka Project">
+          </div>
+          <div class="col-md-8">
+            <div class="card-block text-center">
+              <div class="card-body">
+                <h5 class="card-title">The Monka Project</h5>
+                <p class="card-text">Monka project est un projet open-source destiné à faciliter la facturation pour les auto-entrepreneurs</p>
+                <p class="card-text"><small class="text-muted">Projet en cours de réalisation</small></p>
+                <a href="https://github.com/Julio-Bento-Diddy-Lara-Detsou-team/Monka-Project" class="btn btn-primary stretched-link">Voir le projet</a>
+              </div>
+            </div>
+          </div>
         </div>
-        <div class="col-md-8">
-          <div class="card-body">
-            <h5 class="card-title">The Monka Project</h5>
-            <p class="card-text">Monka project est un projet open-source destiné à faciliter la facturation pour les auto-entrepreneurs</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+      </div>
+    </div>
+    <div class="d-flex justify-content-center">
+      <div class="card mb-3">
+        <div class="row g-0">
+          <div class="col-md-4">
+            <img src= assets/img/cykl2.png  alt="Image Cykl Project">
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <div class="card-bock text-center">
+                <h5 class="card-title">Cykl</h5>
+                <p class="card-text">Cykl est une application éditée par we are the words sprl, une société d'optimisation de contenu SEO basée en Belgique à Bruxelle. Nous intervenons sur la partie back-end de l'application afin de la rendre commercialisable à l'horizon 2021</p>
+                <p class="card-text"><small class="text-muted">Projet en cours de réalisation</small></p>
+                <a href="https://www.cykl.be/" class="btn btn-primary stretched-link">Voir le projet</a>
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </div>
   </div>
-  <div class="d-flex justify-content-center">
-    <div class="card mb-3" style="max-width: 540px;">
-      <div class="row g-0">
-        <div class="col-md-4">
-          <img src= assets/img/cykl.png  alt="Image Monka Project" height="150" width="180">
-        </div>
-        <div class="col-md-8">
-          <div class="card-body">
-            <h5 class="card-title">Cykl</h5>
-            <p class="card-text">Cykl est une application éditée par we are the words sprl, une société d'optimisation de contenu SEO basée en Belgique à Bruxelle. Nous intervenons sur la partie back-end de l'application afin de la rendre commercialisable à l'horizon 2021</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-          </div>
-        </div>
-      </div>
-    </div>
-    </div>
-  </div>
-  </div>
+</div>
 
-  <!-- CONTACT FORM -->
+
+<!-- CONTACT FORM -->
 
 
 <!-- HIRE US -->
 <h2 class="display-4 text-center" id="hire_us">HIRE US</h2>
 
 
-  <div class="row justify-content-center contact">
-    <div class="col-6">
-      <form>
-        <div class="mb-3">
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Adresse email">
-        </div>
-        <div class="mb-3">
-          <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Saisissez votre message..."></textarea>
-        </div>
-        <div class="mb-3 form-check">
-          <input type="checkbox" class="form-check-input" id="exampleCheck1">
-          <label class="form-check-label" for="exampleCheck1">En soumettant ce formulaire, j'accepte que les informations saisies soient utilisées dans le cadre d'une demande d'informations et de la relation commerciale qui pourrait en découler. </label>
-        </div>
-        <div class="text-center">
-          <button type="submit" class="btn btn-outline-primary">Envoyer</button>
-        </div>
-      </form>
-    </div>
+<div class="row justify-content-center contact">
+  <div class="col-6">
+    <form>
+      <div class="mb-3">
+        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Adresse email">
+      </div>
+      <div class="mb-3">
+        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Saisissez votre message..."></textarea>
+      </div>
+      <div class="mb-3 form-check">
+        <input type="checkbox" class="form-check-input" id="exampleCheck1">
+        <label class="form-check-label" for="exampleCheck1">En soumettant ce formulaire, j'accepte que les informations saisies soient utilisées dans le cadre d'une demande d'informations et de la relation commerciale qui pourrait en découler. </label>
+      </div>
+      <div class="text-center">
+        <button type="submit" class="btn btn-outline-primary">Envoyer</button>
+      </div>
+    </form>
+  </div>
 
-<div class="row">
+  <div class="row">
 
-</div>
+  </div>
 
-<!-- CONTACT FORM -->
+  <!-- CONTACT FORM -->
 
-<h2 class="display-4 text-center" id="contact">CONTACT</h2>
+  <h2 class="display-4 text-center" id="contact">CONTACT</h2>
 
 
 </div> <!-- end .container -->
