add some style Bento will NEVER like but that's how we work  :D

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <section>
   <div class="jumbotron jumbotron-fluid">
     <div class="container text-center text-light">
-      <h1 class="display-4">Julio & Bento</h1>
+      <h1 class="display-4"> <span class="text-primary">J</span>ulio & <span class="text-primary">B</span>ento</h1>
       <h2 class="h3">Développeurs Ruby on Rails</h2>
       <a type="button" href="#projets" class="btn btn-primary btn-lg m-3">Nos projets</a>
       <a type="button" href="#contact" class="btn btn-secondary btn-lg  m-3">Nous contacter</a>
@@ -56,24 +56,21 @@
     <div class="col-3">
       <h3 class="text-center">Full-Remote</h3>
       <p class="text-justify">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla ultrices vitae urna tempus viverra.
-        Vestibulum dictum enim ut porta dapibus. Vivamus pharetra sagittis fringilla.
+        Nous travaillons exclusivement en Full-Remote, c'est à dire de notre bureau. Nous échangeons régulièrement avec nos clients par téléphone, ou par visio. Cela évite des déplacements superflux et correspond à notre vision écologique du travail.
       </p>
     </div>
 
     <div class="col-3">
       <h3 class="text-center">Fléxibles</h3>
       <p class="text-justify">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla ultrices vitae urna tempus viverra.
-        Vestibulum dictum enim ut porta dapibus. Vivamus pharetra sagittis fringilla.
+        Nous nous adaptons à vos éxigences. Dans le développement, tout est possible. Tout dépend du temps pour le faire ainsi que de votre budget. Nous saurons vous conseiller au mieux afin de répondre efficacement à vos demandes.
       </p>
     </div>
 
     <div class="col-3">
       <h3 class="text-center">Persévérants</h3>
       <p class="text-justify">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla ultrices vitae urna tempus viverra.
-        Vestibulum dictum enim ut porta dapibus. Vivamus pharetra sagittis fringilla.
+        Le métier de développeur, c'est régler des problèmes. Nous nous engageons à vous fournir la prestation demandé qu'importe la difficulté rencontrée. Nous irons quoi qu'il arrive au bout de nos engagements.
       </p>
     </div>
   </div>
@@ -91,7 +88,7 @@
             <div class="card-block text-center">
               <div class="card-body">
                 <h5 class="card-title">The Monka Project</h5>
-                <p class="card-text">Monka project est un projet open-source destiné à faciliter la facturation pour les auto-entrepreneurs</p>
+                <p class="card-text">Monka project est un projet open-source destiné à faciliter la facturation pour les auto-entrepreneurs. Toujours en cours de développement, il est régulièrement mis à jour entre deux missions</p>
                 <p class="card-text"><small class="text-muted">Projet en cours de réalisation</small></p>
                 <a href="https://github.com/Julio-Bento-Diddy-Lara-Detsou-team/Monka-Project" class="btn btn-primary stretched-link">Voir le projet</a>
               </div>
