--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <!-- NAVBAR -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Julio & Bento</a>
+    <a class="navbar-brand" href="#"><span class="text-primary">J</span>ulio & <span class="text-primary">B</span>ento</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
