add links to professional profils

--- a/index.html
+++ b/index.html
@@ -124,35 +124,83 @@
 
 
 <!-- HIRE US -->
-<h2 class="display-4 text-center" id="hire_us">HIRE US</h2>
+<div class="container" id="present">
+  <h2 class="display-4 text-center" id="hire_us">Nous recruter</h2>
 
+  <div class="row" id="skill">
+    <div class="col">
+      <h3 class="text-center">Julien Tribouillier</h3>
+      <p align="center"><img src="https://devicons.github.io/devicon/devicon.git/icons/angularjs/angularjs-original.svg" alt="angularjs" width="40" height="40"/>
+        <img src="https://devicons.github.io/devicon/devicon.git/icons/css3/css3-original-wordmark.svg" alt="css3" width="40" height="40"/>
+        <img src="https://www.vectorlogo.zone/logos/git-scm/git-scm-icon.svg" alt="git" width="40" height="40"/>
+        <img src="https://devicons.github.io/devicon/devicon.git/icons/html5/html5-original-wordmark.svg" alt="html5" width="40" height="40"/>
+        <img src="https://devicons.github.io/devicon/devicon.git/icons/javascript/javascript-original.svg" alt="javascript" width="40" height="40"/>
+        <img src="https://devicons.github.io/devicon/devicon.git/icons/linux/linux-original.svg" alt="linux" width="40" height="40"/>
+        <img src="https://devicons.github.io/devicon/devicon.git/icons/mysql/mysql-original-wordmark.svg" alt="mysql" width="40" height="40"/>
+        <img src="https://devicons.github.io/devicon/devicon.git/icons/photoshop/photoshop-plain.svg" alt="photoshop" width="40" height="40"/>
+        <img src="https://devicons.github.io/devicon/devicon.git/icons/postgresql/postgresql-original-wordmark.svg" alt="postgresql" width="40" height="40"/>
+        <img src="https://devicons.github.io/devicon/devicon.git/icons/rails/rails-original-wordmark.svg" alt="rails" width="40" height="40"/>
+        <img src="https://devicons.github.io/devicon/devicon.git/icons/ruby/ruby-original-wordmark.svg" alt="ruby" width="40" height="40"/>
+      </p>
+      <p>
+        <h3>Liens Profils</h3>
+        <a href="https://www.upwork.com/o/profiles/users/~0132777197f9267601/"><img src= "assets/img/upwork.png" alt="upork" width="80" height="80"/></a>
+        <a href="https://www.linkedin.com/in/julien-tribouillier/"><img src= "assets/img/linkedin.jpg" alt="linkedin" width="80" height="80"/></a>
+        </p>
+    </div>
+    <div class="col">
+      <h3 class="text-center">David Bento-Pereira</h3>
+      <p align="center"><img src="https://devicons.github.io/devicon/devicon.git/icons/angularjs/angularjs-original.svg" alt="angularjs" width="40" height="40"/>
+        <img src="https://devicons.github.io/devicon/devicon.git/icons/css3/css3-original-wordmark.svg" alt="css3" width="40" height="40"/>
+        <img src="https://www.vectorlogo.zone/logos/git-scm/git-scm-icon.svg" alt="git" width="40" height="40"/>
+        <img src="https://devicons.github.io/devicon/devicon.git/icons/html5/html5-original-wordmark.svg" alt="html5" width="40" height="40"/>
+        <img src="https://devicons.github.io/devicon/devicon.git/icons/javascript/javascript-original.svg" alt="javascript" width="40" height="40"/>
+        <img src="https://devicons.github.io/devicon/devicon.git/icons/linux/linux-original.svg" alt="linux" width="40" height="40"/>
+        <img src="https://devicons.github.io/devicon/devicon.git/icons/mysql/mysql-original-wordmark.svg" alt="mysql" width="40" height="40"/>
+        <img src="https://devicons.github.io/devicon/devicon.git/icons/photoshop/photoshop-plain.svg" alt="photoshop" width="40" height="40"/>
+        <img src="https://devicons.github.io/devicon/devicon.git/icons/postgresql/postgresql-original-wordmark.svg" alt="postgresql" width="40" height="40"/>
+        <img src="https://devicons.github.io/devicon/devicon.git/icons/rails/rails-original-wordmark.svg" alt="rails" width="40" height="40"/>
+        <img src="https://devicons.github.io/devicon/devicon.git/icons/ruby/ruby-original-wordmark.svg" alt="ruby" width="40" height="40"/>
+      </p>
+        <p>
+          <h3>Liens Profils</h3>
+          <a href="https://www.malt.fr/profile/davidbentopereira?q=David%20Bento-pereira&location=&f-fam=&f-cat=&searchid=5f3f8baee6c6170007d2d9dc"><img src= "assets/img/malt.png" alt="malt" width="80" height="80"/></a>
+        <a href="https://www.linkedin.com/in/david-bento-pereira/"><img src= "assets/img/linkedin.jpg" alt="linkedin" width="80" height="80"/></a>
+        </p>
 
-<div class="row justify-content-center contact">
-  <div class="col-6">
-    <form>
-      <div class="mb-3">
-        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Adresse email">
-      </div>
-      <div class="mb-3">
-        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Saisissez votre message..."></textarea>
-      </div>
-      <div class="mb-3 form-check">
-        <input type="checkbox" class="form-check-input" id="exampleCheck1">
-        <label class="form-check-label" for="exampleCheck1">En soumettant ce formulaire, j'accepte que les informations saisies soient utilisées dans le cadre d'une demande d'informations et de la relation commerciale qui pourrait en découler. </label>
-      </div>
-      <div class="text-center">
-        <button type="submit" class="btn btn-outline-primary">Envoyer</button>
-      </div>
-    </form>
+    </div>
+
   </div>
+</div>
 
-  <div class="row">
+<div class="container" id="contact">
+  <div class="row justify-content-center contact">
+    <div class="col-6">
+      <form>
+        <div class="mb-3">
+          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Adresse email">
+        </div>
+        <div class="mb-3">
+          <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Saisissez votre message..."></textarea>
+        </div>
+        <div class="mb-3 form-check">
+          <input type="checkbox" class="form-check-input" id="exampleCheck1">
+          <label class="form-check-label" for="exampleCheck1">En soumettant ce formulaire, j'accepte que les informations saisies soient utilisées dans le cadre d'une demande d'informations et de la relation commerciale qui pourrait en découler. </label>
+        </div>
+        <div class="text-center">
+          <button type="submit" class="btn btn-outline-primary">Envoyer</button>
+        </div>
+      </form>
+    </div>
 
+    <div class="row">
+
+    </div>
   </div>
 
   <!-- CONTACT FORM -->
 
-  <h2 class="display-4 text-center" id="contact">CONTACT</h2>
+  <h2 class="display-4 text-center" id=>CONTACT</h2>
 
 
 </div> <!-- end .container -->
