--- a/index.html
+++ b/index.html
@@ -142,12 +142,14 @@
         <img src="https://devicons.github.io/devicon/devicon.git/icons/rails/rails-original-wordmark.svg" alt="rails" width="40" height="40"/>
         <img src="https://devicons.github.io/devicon/devicon.git/icons/ruby/ruby-original-wordmark.svg" alt="ruby" width="40" height="40"/>
       </p>
-      <p>
-      <h3 class="text-center">Liens Profils</h3>
-      <div class="text-center">
-        <a href="https://www.upwork.com/o/profiles/users/~0132777197f9267601/"><img src= "assets/img/upwork.png" alt="upork" width="80" height="80"/></a>
-        <a href="https://www.linkedin.com/in/julien-tribouillier/"><img src= "assets/img/linkedin.jpg" alt="linkedin" width="80" height="80"/></a>
-        </p>
+      <div id="profilstyle">
+        <p>
+        <h3 class="text-center">Liens Profils</h3>
+        <div class="text-center">
+          <a href="https://www.upwork.com/o/profiles/users/~0132777197f9267601/"><img src= "assets/img/upwork.png" alt="upork" width="80" height="80"/></a>
+          <a href="https://www.linkedin.com/in/julien-tribouillier/"><img src= "assets/img/linkedin.jpg" alt="linkedin" width="80" height="80"/></a>
+          </p>
+        </div>
       </div>
     </div>
     <div class="col">
@@ -165,16 +167,18 @@
         <img src="https://devicons.github.io/devicon/devicon.git/icons/ruby/ruby-original-wordmark.svg" alt="ruby" width="40" height="40"/>
       </p>
       <p>
-      <h3 class="text-center">Liens Profils</h3>
-      <div class="text-center">
-        <a href="https://www.malt.fr/profile/davidbentopereira?q=David%20Bento-pereira&location=&f-fam=&f-cat=&searchid=5f3f8baee6c6170007d2d9dc"><img src= "assets/img/malt.png" alt="malt" width="80" height="80"/></a>
-        <a href="https://www.linkedin.com/in/david-bento-pereira/"><img src= "assets/img/linkedin.jpg" alt="linkedin" width="80" height="80"/></a>
-        </p>
-      </div>
-
+      <div id="profilstyle">
+        <h3 class="text-center">Liens Profils</h3>
+        <div class="text-center">
+          <a href="https://www.malt.fr/profile/davidbentopereira?q=David%20Bento-pereira&location=&f-fam=&f-cat=&searchid=5f3f8baee6c6170007d2d9dc"><img src= "assets/img/malt.png" alt="malt" width="80" height="80"/></a>
+          <a href="https://www.linkedin.com/in/david-bento-pereira/"><img src= "assets/img/linkedin.jpg" alt="linkedin" width="80" height="80"/></a>
+      </p>
     </div>
-
   </div>
+
+</div>
+
+</div>
 </div>
 
 <div class="container" id="contact">
