add transformation to d1 to d3

--- a/index.html
+++ b/index.html
@@ -55,21 +55,21 @@
   <div class="row justify-content-center" id="description">
     <div class="col-3">
       <h3 class="text-center">Full-Remote</h3>
-      <p class="text-justify">
+      <p class="text-justify" id="d1">
         Nous travaillons exclusivement en Full-Remote, c'est à dire de notre bureau. Nous échangeons régulièrement avec nos clients par téléphone, ou par visio. Cela évite des déplacements superflux et correspond à notre vision écologique du travail.
       </p>
     </div>
 
     <div class="col-3">
       <h3 class="text-center">Fléxibles</h3>
-      <p class="text-justify">
+      <p class="text-justify" id="d2">
         Nous nous adaptons à vos éxigences. Dans le développement, tout est possible. Tout dépend du temps pour le faire ainsi que de votre budget. Nous saurons vous conseiller au mieux afin de répondre efficacement à vos demandes.
       </p>
     </div>
 
     <div class="col-3">
       <h3 class="text-center">Persévérants</h3>
-      <p class="text-justify">
+      <p class="text-justify" id="d3">
         Le métier de développeur, c'est régler des problèmes. Nous nous engageons à vous fournir la prestation demandé qu'importe la difficulté rencontrée. Nous irons quoi qu'il arrive au bout de nos engagements.
       </p>
     </div>
