style: Add the "hire" us section

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
   </div>
 
   <!-- PROJECTS -->
-  <h2 class="display-4 text-center" id="projets">PROJETS</h2>
+  <h2 class="display-4 text-center text-gradient" id="projets">PROJETS</h2>
   <div class="cards">
     <div class="d-flex justify-content-center">
       <div class="card mb-3">
@@ -125,7 +125,7 @@
 
 <!-- HIRE US -->
 <div class="container" id="present">
-  <h2 class="display-4 text-center" id="hire_us">Nous recruter</h2>
+  <h2 class="display-4 text-center text-gradient" id="hire_us">Nous recruter</h2>
 
   <div class="row" id="skill">
     <div class="col">
@@ -208,7 +208,24 @@
 
   <!-- CONTACT FORM -->
 
-  <h2 class="display-4 text-center" id=>CONTACT</h2>
+  <h2 class="display-4 text-center text-gradient">NOUS RECRUTER</h2>
+
+  <p class="lead text-center">Retrouvez-nous sur ces plateformes de Freelancing et proposez-nous votre projet</p>
+
+  <div class="row justify-content-center mb-4">
+    <!-- Malt Profile -->
+    <div class="col-4 text-center">
+      <a href="//www.malt.fr/profile/davidbentopereira" target="_blank">
+        <img src="assets/img/logo_malt.png" alt="Logo Lalt">
+      </a>
+    </div>
+    <!-- Upwork Profile -->
+    <div class="col-4 text-center">
+      <a href="">
+        <img src="assets/img/logo_upwork.png" alt="Logo Lalt">
+      </a>
+    </div>
+  </div>
 
 
 </div> <!-- end .container -->
