style: add section "our skills"

--- a/index.html
+++ b/index.html
@@ -120,9 +120,6 @@
 </div>
 
 
-<!-- CONTACT FORM -->
-
-
 <!-- HIRE US -->
 <div class="container" id="present">
   <h2 class="display-4 text-center text-gradient" id="hire_us">Nous recruter</h2>
@@ -142,19 +139,11 @@
         <img src="https://devicons.github.io/devicon/devicon.git/icons/rails/rails-original-wordmark.svg" alt="rails" width="40" height="40"/>
         <img src="https://devicons.github.io/devicon/devicon.git/icons/ruby/ruby-original-wordmark.svg" alt="ruby" width="40" height="40"/>
       </p>
-      <div id="profilstyle">
-        <p>
-        <h3 class="text-center">Liens Profils</h3>
-        <div class="text-center">
-          <a href="https://www.upwork.com/o/profiles/users/~0132777197f9267601/"><img src= "assets/img/upwork.png" alt="upork" width="80" height="80"/></a>
-          <a href="https://www.linkedin.com/in/julien-tribouillier/"><img src= "assets/img/linkedin.jpg" alt="linkedin" width="80" height="80"/></a>
-          </p>
-        </div>
-      </div>
     </div>
     <div class="col">
       <h3 class="text-center">David Bento-Pereira</h3>
-      <p align="center"><img src="https://devicons.github.io/devicon/devicon.git/icons/angularjs/angularjs-original.svg" alt="angularjs" width="40" height="40"/>
+      <p align="center">
+        <img src="https://devicons.github.io/devicon/devicon.git/icons/angularjs/angularjs-original.svg" alt="angularjs" width="40" height="40"/>
         <img src="https://devicons.github.io/devicon/devicon.git/icons/css3/css3-original-wordmark.svg" alt="css3" width="40" height="40"/>
         <img src="https://www.vectorlogo.zone/logos/git-scm/git-scm-icon.svg" alt="git" width="40" height="40"/>
         <img src="https://devicons.github.io/devicon/devicon.git/icons/html5/html5-original-wordmark.svg" alt="html5" width="40" height="40"/>
@@ -166,47 +155,86 @@
         <img src="https://devicons.github.io/devicon/devicon.git/icons/rails/rails-original-wordmark.svg" alt="rails" width="40" height="40"/>
         <img src="https://devicons.github.io/devicon/devicon.git/icons/ruby/ruby-original-wordmark.svg" alt="ruby" width="40" height="40"/>
       </p>
-      <p>
-      <div id="profilstyle">
-        <h3 class="text-center">Liens Profils</h3>
-        <div class="text-center">
-          <a href="https://www.malt.fr/profile/davidbentopereira?q=David%20Bento-pereira&location=&f-fam=&f-cat=&searchid=5f3f8baee6c6170007d2d9dc"><img src= "assets/img/malt.png" alt="malt" width="80" height="80"/></a>
-          <a href="https://www.linkedin.com/in/david-bento-pereira/"><img src= "assets/img/linkedin.jpg" alt="linkedin" width="80" height="80"/></a>
-      </p>
     </div>
   </div>
 
-</div>
+  <h2 class="display-4 text-center text-gradient">NOS TALENTS</h2>
 
-</div>
-</div>
-
-<div class="container" id="contact">
-  <div class="row justify-content-center contact">
+  <div class="row">
+    <!-- Left Column -->
     <div class="col-6">
-      <form>
-        <div class="mb-3">
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Adresse email">
+      <!-- Block Left Top -->
+      <div class="row align-items-center justify-content-center">
+        <div class="col-2">
+          <img src="assets/img/idea_bulb.png" alt="">
         </div>
-        <div class="mb-3">
-          <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Saisissez votre message..."></textarea>
+        <div class="col-6">
+          <h5>Développement Web</h5>
+          <p>Site vitrine, site e-commerce, application web. <br />Parlez-nous de votre projet.</p>
         </div>
-        <div class="mb-3 form-check">
-          <input type="checkbox" class="form-check-input" id="exampleCheck1">
-          <label class="form-check-label" for="exampleCheck1">En soumettant ce formulaire, j'accepte que les informations saisies soient utilisées dans le cadre d'une demande d'informations et de la relation commerciale qui pourrait en découler. </label>
+      </div>
+      <!-- Block Left Middle -->
+      <div class="row align-items-center justify-content-center">
+        <div class="col-2">
+          <img src="assets/img/idea_bulb.png" alt="">
         </div>
-        <div class="text-center">
-          <button type="submit" class="btn btn-outline-primary">Envoyer</button>
+        <div class="col-6">
+          <h5>Développement Web</h5>
+          <p>Site vitrine, site e-commerce, application web. <br />Parlez-nous de votre projet.</p>
         </div>
-      </form>
+      </div>
+      <!-- Block Left Bottom -->
+      <div class="row align-items-center justify-content-center">
+        <div class="col-2">
+          <img src="assets/img/idea_bulb.png" alt="">
+        </div>
+        <div class="col-6">
+          <h5>Développement Web</h5>
+          <p>Site vitrine, site e-commerce, application web. <br />Parlez-nous de votre projet.</p>
+        </div>
+      </div>
     </div>
 
-    <div class="row">
-
+    <!-- Right Column -->
+    <div class="col-6">
+      <!-- Block Left Top -->
+      <div class="row align-items-center justify-content-center">
+        <div class="col-2">
+          <img src="assets/img/idea_bulb.png" alt="">
+        </div>
+        <div class="col-6">
+          <h5>Développement Web</h5>
+          <p>Site vitrine, site e-commerce, application web. <br />Parlez-nous de votre projet.</p>
+        </div>
+      </div>
+      <!-- Block Left Middle -->
+      <div class="row align-items-center justify-content-center">
+        <div class="col-2">
+          <img src="assets/img/idea_bulb.png" alt="">
+        </div>
+        <div class="col-6">
+          <h5>Développement Web</h5>
+          <p>Site vitrine, site e-commerce, application web. <br />Parlez-nous de votre projet.</p>
+        </div>
+      </div>
+      <!-- Block Left Bottom -->
+      <div class="row align-items-center justify-content-center">
+        <div class="col-2">
+          <img src="assets/img/idea_bulb.png" alt="">
+        </div>
+        <div class="col-6">
+          <h5>Développement Web</h5>
+          <p>Site vitrine, site e-commerce, application web. <br />Parlez-nous de votre projet.</p>
+        </div>
+      </div>
     </div>
   </div>
 
-  <!-- CONTACT FORM -->
+  <!-- OUR TEAM -->
+
+  <!-- ... -->
+
+  <!-- OUR SKILLS -->
 
   <h2 class="display-4 text-center text-gradient">NOUS RECRUTER</h2>
 
